# neurowolf

./: .gitignore  .gitmodules  Containerfile  Dockerfile  LICENSE.md  Phrase2.txt  README.md  a.out  compose.yml  go.mod  go.sum  gpuwolf_arm64  gpuwolfimggen.cpp  main  main.cpp  main.cu  main.go  neurowolf.py  pyproject.toml  requirements.txt  telegram_bot.go  wisdomLog.txt  wolf.cpp  wolf.h  wolf.hpp  wolfimggen.go  wolfimggen.h  wolfwisdom
Source/:  Phrase1.txt  Adj.txt  Noun.txt  Phrase1.txt  Phrase2.txt  Template Phrases 1.txt  Verb.txt
Wolf/: Wolf.go
content/text/: Noun.txt  Phrase2.txt  Template Phrases 1.txt
include/: bot.hpp
source/text/: Adj.txt  Template Phrases 1.txt
src/: bot.cpp  neurowolf.py  wisdom.cpp
src/neurowolf/: ai.py  image.py  main.py  tg.py  utils.py
wolf/: wolf.go
